알림창 내용 수정

--- a/stay_book.html
+++ b/stay_book.html
@@ -180,7 +180,7 @@
                     </div>
                 </div>
                 <div class="room_pay">
-                    <button type="button" class="btn btn-outline-primary btn-sm" onclick="loginCheck()">결제하기</button>
+                    <button type="button" class="btn btn-outline-primary btn-sm" onclick="payCheck()">결제하기</button>
                 </div>
             </div>
             
