--- a/index.html
+++ b/index.html
@@ -7,8 +7,6 @@
     <title>메인페이지</title>
     <!-- 공통 css -->
     <link rel="stylesheet" type="text/css" href="css/stay/common.css">
-    <!-- 검색 css -->
-    <link rel="stylesheet" href="css/stay/search_common.css">
     <!-- 메인페이지 css -->
     <link rel="stylesheet" type="text/css" href="css/stay/index.css">
     <!-- 인기 숙소 -->
@@ -23,7 +21,6 @@
     <!-- 스크롤시 상단바 -->
     <!-- <script src="js/stay/scroll.js"></script>
     <link rel="stylesheet" type="text/css" href="css/stay/scroll.css"> -->
-    <!-- 상단 숙소유형, 체크인, 체크아웃, 인원수 -->
 
     <!-- 부트스트랩 -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
@@ -151,7 +148,7 @@
                                         <span class="users fa fa-users" aria-hidden="true"></span>
                                         <input type="text" class="stay_person" name="stay_person" placeholder="인원수"oninput="this.value = this.value.replace(/[^0-9.]/g, '').replace(/(\..*)\./g, '$1');" >
                                     </label>
-                                    <button type="button" class="btn_stay_search" onclick="fn_search_submit()"><span class=" saerch fa fa-search" aria-hidden="true"></span></button>
+                                    <button type="button" class="btn_stay_search" onclick="fn_search_submit()"><span id="search_btn" class=" fa fa-search" aria-hidden="true"></span></button>
                                 </form>
                             </div>
                         </div>
@@ -174,35 +171,35 @@
                                 </div>
                                 <div class="room col">
                                     <div class="room_pic">
-                                        <img src="images/Home/best_room/24 Guest House Jeonju.jpg" alt="pension_pic">
+                                        <img src="images/Home/best_room/forest_pension.jpg" alt="pension_pic">
                                     </div>
-                                    <p class="pension_name">24게스트하우스 전주점</p>
-                                    <p>전북 전주시 완산구<br>현무3길 56</p>
-                                    <p>50,000원</p>
+                                    <p class="pension_name">운일암숲</p>
+                                    <p>전북 진안군 주천면<br>동상주천로 1959</p>
+                                    <p>100,000원</p>
                                 </div>
                                 <div class="room col">
                                     <div class="room_pic">
-                                        <img src="images/Home/best_room/Jeonju Way Guest House.jpg" alt="pension_pic">
+                                        <img src="images/Home/best_room/200_pension.jpg" alt="pension_pic">
                                     </div>
-                                    <p class="pension_name">전주 웨이게스트하우스</p>
-                                    <p>전북 전주시 완산구<br>은행로 16</p>
-                                    <p>50,000원</p>
+                                    <p class="pension_name">이백 하우스</p>
+                                    <p>전북 김제시 금구면<br>월전로 62-20</p>
+                                    <p>130,000원</p>
                                 </div>
                                 <div class="room col">
                                     <div class="room_pic">
-                                        <img src="images/Home/best_room/Jeonju RGB Guest House.jpg" alt="pension_pic">
+                                        <img src="images/Home/best_room/꼴 펜션.jpg" alt="pension_pic">
                                     </div>
-                                    <p class="pension_name">전주 RGB 게스트하우스</p>
-                                    <p>위전북 전주시 완산구<br>전주천동로 86-1</p>
-                                    <p>55,000원</p>
+                                    <p class="pension_name">꼴 펜션</p>
+                                    <p>전북 전주시 완산구<br>은행로 21</p>
+                                    <p>98,000원</p>
                                 </div>
                                 <div class="room col">
                                     <div class="room_pic">
-                                        <img src="images/Home/best_room/Jeonju Dowon Guesthouse.jpg" alt="pension_pic">
+                                        <img src="images/Home/best_room/sodam_pension.jpg" alt="pension_pic">
                                     </div>
-                                    <p class="pension_name">전주 도원 게스트하우스</p>
-                                    <p>전북 전주시 완산구<br>팔달로 58-3</p>
-                                    <p>60,000원</p>
+                                    <p class="pension_name">소담소담 펜션</p>
+                                    <p>전북 전주시 완산구<br>내원당길 69-6</p>
+                                    <p>90,000원</p>
                                 </div>
                             </div>
                 
